--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 aiofiles==23.2.1
 annotated-types==0.6.0
+anyio==4.2.0
 asttokens==2.4.1
+azure-core==1.29.6
+azure-storage-blob==12.19.0
 blinker==1.7.0
 blis==0.7.11
 catalogue==2.0.10
@@ -29,6 +32,7 @@ hyperframe==6.0.1
 idna==3.6
 ipykernel==6.28.0
 ipython==8.19.0
+isodate==0.6.1
 it-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/it_core_news_lg-3.7.0/it_core_news_lg-3.7.0-py3-none-any.whl#sha256=f48bd152621c872c1f177dbe21929fbb28751e73eb3c61714cf6344c6d582bbf
 it-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/it_core_news_sm-3.7.0/it_core_news_sm-3.7.0-py3-none-any.whl#sha256=c6a300c7d7b440cee6a896f648bce744c9f091375dc8d7ff834a8930d59eb4bd
 itsdangerous==2.1.2
@@ -59,6 +63,7 @@ pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
 Pygments==2.17.2
+pyhumps==3.8.0
 PyPDF2==3.0.1
 pypdfium2==4.25.0
 python-dateutil==2.8.2
@@ -66,11 +71,13 @@ pywin32==306
 PyYAML==6.0.1
 pyzmq==25.1.2
 Quart==0.19.4
+quart-schema==0.18.0
 regex==2023.12.25
 requests==2.31.0
 safetensors==0.4.1
 six==1.16.0
 smart-open==6.4.0
+sniffio==1.3.0
 spacy==3.7.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
