--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ pyhumps==3.8.0
 PyPDF2==3.0.1
 pypdfium2==4.25.0
 python-dateutil==2.8.2
-pywin32==306
+# pywin32==306
 PyYAML==6.0.1
 pyzmq==25.1.2
 Quart==0.19.4
